--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .bg{
-    background-image: url(/img/bg-sarten2.jpg);
+    background-image: url(../img/bg-sarten2.jpg);
     background-position: center center;
 }
 body{
